--- a/local/pressure-washing-selby.html
+++ b/local/pressure-washing-selby.html
@@ -134,9 +134,9 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h1></h1>
-<p></p>
-<p></p>
+<h1>Pressure Washing Services Across Selby YO8</h1>
+<p>We provide professional pressure washing services across Selby YO8, helping homeowners and businesses keep their exterior surfaces clean, safe, and well maintained. Being based locally means we understand the common issues faced by properties in the Selby area, including algae growth, moss build-up, and stubborn dirt caused by damp weather conditions. Our service is suitable for a wide range of surfaces such as driveways, patios, paths, walls, and outdoor spaces, all cleaned using the correct pressure and techniques for long-lasting results. Whether your property is in the town centre or a nearby residential area, our pressure washing service is designed to restore surfaces without causing damage.</p>
+<p>We work throughout Selby and surrounding locations within the YO8 postcode, offering reliable appointments and consistent results. Our local knowledge allows us to tailor each clean to the surface type and environment, ensuring effective and professional exterior cleaning across the area.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -147,9 +147,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Local Exterior Cleaning for Selby and Nearby Areas</h2>
+<p>Our pressure washing service covers Selby and nearby areas, providing dependable exterior cleaning for both residential and commercial properties. Many outdoor surfaces across the Selby area suffer from weather-related staining, moss, and ground-in dirt that can build up over time if left untreated. Our professional pressure washing equipment allows us to deep clean these surfaces safely, improving appearance and reducing the risk of slippery or unsafe conditions. From smaller residential patios to larger driveways and access areas, we deliver a thorough clean that helps maintain the overall condition of your property.</p>
+<p>We regularly provide exterior cleaning services in areas surrounding Selby, including nearby villages and residential developments. If you are located just outside Selby YO8, we are often able to accommodate your request and provide the same high standard of pressure washing across the local area.</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -160,9 +160,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Residential and Commercial Pressure Washing in the Selby Area</h2>
+<p>We offer residential and commercial pressure washing services throughout Selby YO8, supporting homeowners, landlords, and businesses with professional exterior cleaning solutions. Residential pressure washing helps improve kerb appeal, protect surfaces from long-term damage, and keep outdoor spaces looking their best all year round. For commercial properties, clean exterior areas help create a positive first impression and maintain safe access for customers, staff, and visitors. Each job is assessed individually to ensure the correct pressure and cleaning method is used for the surface being treated.</p>
+<p>Our service is available across Selby and nearby locations, making us a convenient choice for local exterior cleaning. Whether you require a one-off clean or regular maintenance, our pressure washing service delivers reliable results across the Selby area.</p>
 <img src="/images/pressure-washing-walls.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -173,9 +173,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
+<h2>Trusted Pressure Washing Covering Selby YO8 and Surroundings</h2>
+<p>Choosing a local pressure washing service in Selby YO8 means choosing reliability, local knowledge, and attention to detail. We take pride in providing consistent exterior cleaning results across Selby and surrounding areas, using professional equipment and proven techniques. Our approach focuses on achieving a deep, even clean while protecting the integrity of each surface. From domestic driveways to commercial outdoor spaces, we work to a high standard on every job, regardless of size or location.</p>
+<p>We serve the Selby community and surrounding areas with a dependable pressure washing service you can trust. If you are located within or near the YO8 postcode, you can expect a professional service focused on quality results and customer satisfaction.</p>
 <img src="/images/pressure-wash-decking.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
@@ -186,20 +186,19 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<P></P>
+<h2>Surfaces That Can Be Pressure Washed</h2>
+<p>Pressure washing is a highly effective exterior cleaning method used to remove dirt, algae, moss, oil stains, and built-up grime from a wide range of outdoor surfaces. It helps restore appearance, improve safety, and extend the lifespan of materials exposed to weather and regular use. By using controlled water pressure, surfaces can be cleaned thoroughly without harsh chemicals or unnecessary damage. Pressure washing is suitable for both residential and commercial properties and can be used as part of routine maintenance or before sealing, painting, or restoration work.</p>
 <ul style="text-align: left;">
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Driveways, removing oil stains, tyre marks, moss, and ground-in dirt from regular vehicle use</li>
+<li>Patios and paving slabs, restoring colour, texture, and slip resistance for safer outdoor spaces</li>
+<li>Pathways and walkways, clearing algae and grime to maintain safe access around properties</li>
+<li>Brick walls and exterior masonry, lifting pollution stains and organic growth without surface damage</li>
+<li>Decking, cleaning algae and dirt while preparing timber or composite surfaces for treatment</li>
+<li>Fences and gates, removing weather staining, algae, and surface build-up to refresh appearance</li>
+<li>Garden furniture, restoring outdoor tables, chairs, and benches affected by moisture and dirt</li>
+<li>Garage floors, removing oil, grease, and ingrained grime for a cleaner working space</li>
+<li>Forecourts and car parks, improving safety and presentation for commercial and public areas</li>
+<li>Steps and entrances, reducing slip risks by removing moss, algae, and dirt build-up</li>
 </ul>
 <img src="/images/pressure-washing-algae.webp"
 alt=""
