--- a/local/pressure-washing-selby.html
+++ b/local/pressure-washing-selby.html
@@ -138,7 +138,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>We provide professional pressure washing services across Selby YO8, helping homeowners and businesses keep their exterior surfaces clean, safe, and well maintained. Being based locally means we understand the common issues faced by properties in the Selby area, including algae growth, moss build-up, and stubborn dirt caused by damp weather conditions. Our service is suitable for a wide range of surfaces such as driveways, patios, paths, walls, and outdoor spaces, all cleaned using the correct pressure and techniques for long-lasting results. Whether your property is in the town centre or a nearby residential area, our pressure washing service is designed to restore surfaces without causing damage.</p>
 <p>We work throughout Selby and surrounding locations within the YO8 postcode, offering reliable appointments and consistent results. Our local knowledge allows us to tailor each clean to the surface type and environment, ensuring effective and professional exterior cleaning across the area.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt=""
+alt="Professional pressure washing of a driveway and patio in Selby YO8, removing moss, algae, and dirt from residential property exterior surfaces"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -151,7 +151,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Our pressure washing service covers Selby and nearby areas, providing dependable exterior cleaning for both residential and commercial properties. Many outdoor surfaces across the Selby area suffer from weather-related staining, moss, and ground-in dirt that can build up over time if left untreated. Our professional pressure washing equipment allows us to deep clean these surfaces safely, improving appearance and reducing the risk of slippery or unsafe conditions. From smaller residential patios to larger driveways and access areas, we deliver a thorough clean that helps maintain the overall condition of your property.</p>
 <p>We regularly provide exterior cleaning services in areas surrounding Selby, including nearby villages and residential developments. If you are located just outside Selby YO8, we are often able to accommodate your request and provide the same high standard of pressure washing across the local area.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Pressure washing service cleaning a residential patio and path in Selby YO8, improving outdoor appearance and safety in local homes and nearby areas."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -164,7 +164,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>We offer residential and commercial pressure washing services throughout Selby YO8, supporting homeowners, landlords, and businesses with professional exterior cleaning solutions. Residential pressure washing helps improve kerb appeal, protect surfaces from long-term damage, and keep outdoor spaces looking their best all year round. For commercial properties, clean exterior areas help create a positive first impression and maintain safe access for customers, staff, and visitors. Each job is assessed individually to ensure the correct pressure and cleaning method is used for the surface being treated.</p>
 <p>Our service is available across Selby and nearby locations, making us a convenient choice for local exterior cleaning. Whether you require a one-off clean or regular maintenance, our pressure washing service delivers reliable results across the Selby area.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt=""
+alt="Residential and commercial exterior cleaning in Selby YO8, showing pressure washing of driveways and commercial outdoor spaces for safe, clean surfaces."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -177,7 +177,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Choosing a local pressure washing service in Selby YO8 means choosing reliability, local knowledge, and attention to detail. We take pride in providing consistent exterior cleaning results across Selby and surrounding areas, using professional equipment and proven techniques. Our approach focuses on achieving a deep, even clean while protecting the integrity of each surface. From domestic driveways to commercial outdoor spaces, we work to a high standard on every job, regardless of size or location.</p>
 <p>We serve the Selby community and surrounding areas with a dependable pressure washing service you can trust. If you are located within or near the YO8 postcode, you can expect a professional service focused on quality results and customer satisfaction.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt=""
+alt="Trusted pressure washing professionals in Selby YO8 cleaning a driveway with high-pressure equipment, delivering reliable results for homes and businesses."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -201,7 +201,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <li>Steps and entrances, reducing slip risks by removing moss, algae, and dirt build-up</li>
 </ul>
 <img src="/images/pressure-washing-algae.webp"
-alt=""
+alt="Various surfaces pressure washed including driveways, patios, pathways, brick walls, decking, fences, garden furniture, garage floors, forecourts, and steps."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -211,29 +211,29 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <!-- ✅ FAQ SECTION -->
 <section style="max-width:900px; margin:40px auto; padding:0 15px;">
 
-<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Bessacarr</h2>
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Selby</h2>
 
 <div>
-<p><strong></strong><br>
-</p>
+<p><strong>What is pressure washing and how does it work?</strong><br>
+Pressure washing uses high-pressure water to remove dirt, moss, algae, oil stains, and grime from outdoor surfaces. The force of the water breaks down built-up contaminants that cannot be removed with normal cleaning methods, restoring the surface’s original appearance.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>What surfaces can be safely pressure washed?</strong><br>
+Pressure washing is suitable for many exterior surfaces including driveways, patios, paving, pathways, brick walls, decking, fences, and outdoor furniture. The pressure level is adjusted to match the material to avoid damage.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Is pressure washing safe for my property?</strong><br>
+When carried out professionally, pressure washing is safe and effective. Using the correct pressure and technique prevents damage to surfaces while ensuring a thorough clean. An assessment is always recommended before starting work.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>How often should pressure washing be done?</strong><br>
+Most properties benefit from pressure washing once a year. Areas exposed to heavy foot traffic, shade, or damp conditions may require more frequent cleaning to prevent moss and algae build-up.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Does pressure washing remove moss and algae completely?</strong><br>
+Yes, pressure washing effectively removes visible moss, algae, and organic growth. For longer-lasting results, additional treatments can be applied to slow regrowth and keep surfaces cleaner for longer.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Can pressure washing improve safety?</strong><br>
+Pressure washing improves safety by removing slippery algae, moss, and grime from walkways, patios, and driveways. This reduces the risk of slips and falls, especially during wet weather.</p>
 
-<p><strong></strong><br>
-</p>
+<p><strong>Do I need pressure washing before sealing or painting?</strong><br>
+Yes, pressure washing is an important preparation step before sealing or painting. It removes dirt and loose debris, allowing coatings to adhere properly and last longer.</p>
 </div>
 
 </section>
@@ -241,8 +241,9 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Close -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
+<h2>Ready to Restore Your Property in Selby YO8?</h2>
+<p>Transform your outdoor spaces with our professional pressure washing services across Selby YO8 and surrounding areas. From driveways, patios, and pathways to brick walls, decking, fences, garden furniture, and commercial forecourts, we clean every surface with care, removing dirt, moss, algae, and grime. Our local expertise ensures safe, effective results that improve appearance, safety, and longevity for your property. Don’t wait for stains and build-up to take over — a clean, refreshed exterior is just a call or click away.</p>
+<p>Contact us today to book your pressure washing service and see the difference for yourself!</p>
 </section>
 
 <!-- ✅ BOTTOM CALL BUTTON -->
@@ -275,58 +276,58 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "mainEntity": [
 {
 "@type": "Question",
-"name": "",
+"name": "What is pressure washing and how does it work?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Pressure washing uses high-pressure water to remove dirt, moss, algae, oil stains, and grime from outdoor surfaces. The force of the water breaks down built-up contaminants that cannot be removed with normal cleaning methods, restoring the surface’s original appearance."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "What surfaces can be safely pressure washed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Pressure washing is suitable for many exterior surfaces including driveways, patios, paving, pathways, brick walls, decking, fences, and outdoor furniture. The pressure level is adjusted to match the material to avoid damage."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Is pressure washing safe for my property?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "When carried out professionally, pressure washing is safe and effective. Using the correct pressure and technique prevents damage to surfaces while ensuring a thorough clean. An assessment is always recommended before starting work"
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How often should pressure washing be done?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Most properties benefit from pressure washing once a year. Areas exposed to heavy foot traffic, shade, or damp conditions may require more frequent cleaning to prevent moss and algae build-up."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Does pressure washing remove moss and algae completely?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes, pressure washing effectively removes visible moss, algae, and organic growth. For longer-lasting results, additional treatments can be applied to slow regrowth and keep surfaces cleaner for longer."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Can pressure washing improve safety?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Pressure washing improves safety by removing slippery algae, moss, and grime from walkways, patios, and driveways. This reduces the risk of slips and falls, especially during wet weather."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Do I need pressure washing before sealing or painting?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes, pressure washing is an important preparation step before sealing or painting. It removes dirt and loose debris, allowing coatings to adhere properly and last longer."
 }
 }
 ]
