--- a/calculator.html
+++ b/calculator.html
@@ -84,7 +84,7 @@ font-size: 12px;
 opacity: 0.6;
 }
 
-.service input {
+.service input, .service select {
 width: 100%;
 padding: 8px;
 border: 2px solid #000;
@@ -93,7 +93,7 @@ text-align: right;
 background: #fff;
 }
 
-.service input:focus {
+.service input:focus, .service select:focus {
 outline: 2px solid #000;
 background: #fff;
 }
@@ -181,45 +181,69 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <div class="calculator">
 <h2>Pressure Washing Calculator</h2>
 
+<!-- DRIVEWAY -->
 <div class="service">
 <label>Driveway <span>£3.50 / m²</span></label>
 <div class="pair">
 <input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
 <input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
+<label>Condition of Surface</label>
+<select id="drivewayCondition" onchange="calculateTotal()">
+<option value="0">Dirty / Dusty</option>
+<option value="1">Moss / Algae (+£1 per m²)</option>
+<option value="1.5">Oil / Paint / Grease (+£1.5 per m²)</option>
+</select>
 <div class="subtotal" id="drivewaySubtotal">Subtotal: £0.00</div>
 </div>
 
+<!-- ROOF -->
 <div class="service">
 <label>Roof <span>£8 / m²</span></label>
 <input type="number" id="roof" placeholder="Total m²" min="0" step="0.5" oninput="calculateTotal()">
 <div class="subtotal" id="roofSubtotal">Subtotal: £0.00</div>
 </div>
 
+<!-- PATIO -->
 <div class="service">
 <label>Patio <span>£3.50 / m²</span></label>
 <div class="pair">
 <input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
 <input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
+<label>Condition of Surface</label>
+<select id="patioCondition" onchange="calculateTotal()">
+<option value="0">Dirty / Dusty</option>
+<option value="1">Moss / Algae (+£1 per m²)</option>
+<option value="1.5">Oil / Paint / Grease (+£1.5 per m²)</option>
+</select>
 <div class="subtotal" id="patioSubtotal">Subtotal: £0.00</div>
 </div>
 
+<!-- WALLS -->
 <div class="service">
 <label>Walls <span>£4 / m²</span></label>
 <div class="pair">
 <input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
 <input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
+<label>Condition of Surface</label>
+<select id="wallsCondition" onchange="calculateTotal()">
+<option value="0">Dirty / Dusty</option>
+<option value="1">Moss / Algae (+£1 per m²)</option>
+<option value="1.5">Oil / Paint / Grease (+£1.5 per m²)</option>
+</select>
 <div class="subtotal" id="wallsSubtotal">Subtotal: £0.00</div>
 </div>
 
+<!-- CONSERVATORY ROOF -->
 <div class="service">
 <label>Conservatory Roof <span>£5 / m²</span></label>
 <input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.5" oninput="calculateTotal()">
 <div class="subtotal" id="conservatorySubtotal">Subtotal: £0.00</div>
 </div>
 
+<!-- FENCE -->
 <div class="service">
 <label>Fence <span>£2.50 / m²</span></label>
 <div class="pair">
@@ -247,12 +271,12 @@ function calculateTotal() {
 const minimumFee = 45;
 
 const services = [
-{id: "driveway", rate: 3.5, inputs: ["drivewayLength", "drivewayWidth"]},
-{id: "roof", rate: 8, inputs: ["roof"]},
-{id: "patio", rate: 3.5, inputs: ["patioLength", "patioWidth"]},
-{id: "walls", rate: 4, inputs: ["wallsLength", "wallsHeight"]},
-{id: "conservatory", rate: 5, inputs: ["conservatory"]},
-{id: "fence", rate: 2.5, inputs: ["fenceLength", "fenceHeight"]},
+{id: "driveway", rate: 3.5, inputs: ["drivewayLength", "drivewayWidth"], hasCondition:true},
+{id: "roof", rate: 8, inputs: ["roof"], hasCondition:false},
+{id: "patio", rate: 3.5, inputs: ["patioLength", "patioWidth"], hasCondition:true},
+{id: "walls", rate: 4, inputs: ["wallsLength", "wallsHeight"], hasCondition:true},
+{id: "conservatory", rate: 5, inputs: ["conservatory"], hasCondition:false},
+{id: "fence", rate: 2.5, inputs: ["fenceLength", "fenceHeight"], hasCondition:false},
 ];
 
 let total = 0;
@@ -260,7 +284,17 @@ let total = 0;
 services.forEach(service => {
 const values = service.inputs.map(id => Math.max(0, parseFloat(document.getElementById(id).value) || 0));
 const area = values.length === 1 ? values[0] : values[0] * values[1];
-const subtotal = area * service.rate;
+
+// Add condition extra if applicable
+let extra = 0;
+if(service.hasCondition){
+const conditionEl = document.getElementById(service.id + "Condition");
+if(conditionEl){
+extra = parseFloat(conditionEl.value) || 0;
+}
+}
+
+const subtotal = area * (service.rate + extra);
 document.getElementById(service.id + "Subtotal").innerText = `Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
 total += subtotal;
 });
@@ -281,6 +315,7 @@ totalEl.innerText = total < minimumFee
 
 function resetCalculator() {
 document.querySelectorAll('.calculator input').forEach(input => input.value = '');
+document.querySelectorAll('.calculator select').forEach(select => select.selectedIndex = 0);
 document.querySelectorAll('.subtotal').forEach(sub => sub.innerText = 'Subtotal: £0.00');
 const totalEl = document.getElementById("total");
 totalEl.innerText = "Enter measurements to see price";
