--- a/calculator.html
+++ b/calculator.html
@@ -56,11 +56,54 @@ margin-top:40px;
 font-size:14px;
 }
 
+/* DATES GRID */
+.dates-grid-container {
+max-width:420px;
+width:95%;
+margin:20px auto;
+padding:15px;
+border:2px solid #000;
+border-radius:10px;
+background:#f5f5f5;
+}
+
+.dates-grid-container h3 {
+text-align:center;
+margin-bottom:10px;
+font-size:18px;
+}
+
+.dates-grid {
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+gap:10px;
+text-align:center;
+}
+
+.date-item {
+padding:10px;
+border-radius:6px;
+cursor:pointer;
+font-weight:600;
+}
+
+.date-available {
+background-color:#27ae60;
+color:#fff;
+}
+
+.date-booked {
+background-color:#e74c3c;
+color:#fff;
+cursor:not-allowed;
+opacity:0.7;
+}
+
 /* CALCULATOR STYLES */
 .calculator {
 max-width: 420px;
 width: 95%;
-margin: 30px auto;
+margin: 10px auto 30px;
 padding: 20px;
 background: #fff;
 border: 2px solid #000;
@@ -186,8 +229,16 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
+<!-- ✅ DATE SELECTION GRID -->
+<div class="dates-grid-container">
+<h3>Select a Date</h3>
+<div class="dates-grid" id="datesGrid">
+<!-- Dates populated by JS -->
+</div>
+</div>
+
 <!-- ✅ MAIN CONTENT -->
-<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+<main style="max-width:1200px; margin:0 auto; padding:0 15px;">
 
 <!-- PRESSURE WASHING CALCULATOR -->
 <div class="calculator">
@@ -289,6 +340,34 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 </footer>
 
 <script>
+// DATE GRID ARRAY
+const dates = [
+{ date: "Monday 27th Jan", status: "available" },
+{ date: "Wednesday 29th Jan", status: "booked" },
+{ date: "Friday 31st Jan", status: "available" },
+{ date: "Monday 3rd Feb", status: "available" }
+];
+
+const datesGridEl = document.getElementById("datesGrid");
+datesGridEl.innerHTML = "";
+
+dates.forEach(item => {
+const div = document.createElement("div");
+div.classList.add("date-item");
+div.classList.add(item.status === "available" ? "date-available" : "date-booked");
+div.innerText = item.date;
+
+if(item.status === "available"){
+div.addEventListener("click", () => {
+alert(`You selected ${item.date}`);
+// Optional: store selected date in hidden input
+});
+}
+
+datesGridEl.appendChild(div);
+});
+
+// CALCULATOR
 function calculateTotal() {
 const minimumFee = 45;
 
@@ -346,3 +425,4 @@ totalEl.innerText = "Enter measurements to see price";
 
 </body>
 </html>
+
