--- a/calculator.html
+++ b/calculator.html
@@ -71,6 +71,7 @@ background:#f5f5f5;
 text-align:center;
 margin-bottom:10px;
 font-size:18px;
+cursor:pointer;
 }
 
 .dates-grid {
@@ -78,13 +79,14 @@ display: grid;
 grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
 gap:10px;
 text-align:center;
+display:none; /* hidden by default */
 }
 
 .date-item {
 padding:10px;
 border-radius:6px;
-cursor:pointer;
 font-weight:600;
+cursor: default; /* read-only */
 }
 
 .date-available {
@@ -95,7 +97,6 @@ color:#fff;
 .date-booked {
 background-color:#e74c3c;
 color:#fff;
-cursor:not-allowed;
 opacity:0.7;
 }
 
@@ -229,11 +230,11 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- ✅ DATE SELECTION GRID -->
+<!-- ✅ COLLAPSIBLE DATE GRID -->
 <div class="dates-grid-container">
-<h3>Select a Date</h3>
+<h3 id="toggleDates">Select a Date ▼</h3>
 <div class="dates-grid" id="datesGrid">
-<!-- Dates populated by JS -->
+<!-- Dates populated via JS -->
 </div>
 </div>
 
@@ -356,15 +357,20 @@ const div = document.createElement("div");
 div.classList.add("date-item");
 div.classList.add(item.status === "available" ? "date-available" : "date-booked");
 div.innerText = item.date;
-
-if(item.status === "available"){
-div.addEventListener("click", () => {
-alert(`You selected ${item.date}`);
-// Optional: store selected date in hidden input
-});
-}
-
 datesGridEl.appendChild(div);
+});
+
+// COLLAPSIBLE TOGGLE
+document.getElementById("toggleDates").addEventListener("click", () => {
+const grid = document.getElementById("datesGrid");
+const heading = document.getElementById("toggleDates");
+if(grid.style.display === "none"){
+grid.style.display = "grid";
+heading.innerText = "Select a Date ▲";
+} else {
+grid.style.display = "none";
+heading.innerText = "Select a Date ▼";
+}
 });
 
 // CALCULATOR
@@ -425,4 +431,3 @@ totalEl.innerText = "Enter measurements to see price";
 
 </body>
 </html>
-
