--- a/calculator.html
+++ b/calculator.html
@@ -343,10 +343,26 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <script>
 // DATE GRID ARRAY
 const dates = [
-{ date: "Monday 27th Jan", status: "available" },
-{ date: "Wednesday 29th Jan", status: "booked" },
-{ date: "Friday 31st Jan", status: "available" },
-{ date: "Monday 3rd Feb", status: "available" }
+{ date: "Monday 26th Jan", status: "available" },
+{ date: "Tuesday 27th Jan", status: "booked" },
+{ date: "Wednesday 28th Jan", status: "available" },
+{ date: "Thursday 29th Feb", status: "available" },
+{ date: "Friday 30th Feb", status: "available" },
+{ date: "Saturday 31st Feb", status: "booked" },
+{ date: "Sunday 1st Feb", status: "available" },
+{ date: "Monday 2nd Feb", status: "available" },
+{ date: "Tuesday 3rd Feb", status: "available" },
+{ date: "Wednesday 4th Feb", status: "booked" },
+{ date: "Thursday 5th Feb", status: "available" },
+{ date: "Friday 6th Feb", status: "available" },
+{ date: "Saturday 7th Feb", status: "available" },
+{ date: "Sunday 8th Feb", status: "booked" },
+{ date: "Monday 9th Feb", status: "available" },
+{ date: "Tuesday 10th Feb", status: "available" },
+{ date: "Wednesday 11th Feb", status: "available" },
+{ date: "Friday 12th Feb", status: "booked" },
+{ date: "Saturday 13th Feb", status: "available" },
+{ date: "Sunday 14th Feb", status: "available" }
 ];
 
 const datesGridEl = document.getElementById("datesGrid");
