--- a/calculator.html
+++ b/calculator.html
@@ -344,7 +344,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 // DATE GRID ARRAY
 const dates = [
 { date: "Monday 26th Jan", status: "available" },
-{ date: "Tuesday 27th Jan", status: "booked" },
+{ date: "Tuesday 27th Jan", status: "Partially booked" },
 { date: "Wednesday 28th Jan", status: "available" },
 { date: "Thursday 29th Feb", status: "available" },
 { date: "Friday 30th Feb", status: "available" },
@@ -385,7 +385,7 @@ grid.style.display = "grid";
 heading.innerText = "Select a Date ▲";
 } else {
 grid.style.display = "none";
-heading.innerText = "Select a Date ▼";
+heading.innerText = "Available Dates For Pressure Washing ▼";
 }
 });
 
